# paper_cli

./: .gitignore  README.md  pyproject.toml
src/paperreader_cli/: app.py  cache.py  cli.py  config.py  llm_client.py  pdf_loader.py  renderer.py  scanner.py  summarizer.py  writer.py
src/paperreader_cli/crawler/: __init__.py  arxiv_client.py  service.py  storage.py
