[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperreader-cli"
version = "0.1.0"
description = "CLI tool for reading and summarizing PDFs with LLM"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "PaperReader-CLI" }]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "PyMuPDF>=1.24.0",
  "openai>=1.40.0",
  "PyYAML>=6.0.1"
]

[project.scripts]
paperreader = "paperreader_cli.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
